tests/test0150.exp
Parse error, unexpected } ( tests/test0150.ctr: 4 )
Expected |.
