tests/test0150.ctr
#SINGLE_LANGUAGE
#Test No Parser error
{}.
